# subnet-rental-canister

./: .dockerignore  .gitignore  BUILD.md  Cargo.toml  Dockerfile  LICENSE  README.md  canister_ids.json  dfx.json  rustfmt.toml  subnet_rental_canister.did
.github/: CODEOWNERS
.github/workflows/: build_and_test.yml  ci.yml  ci_workflow.yml  main.yml  rust.yml
scripts/: build.sh  build_canister.sh  docker_build.sh  download_wasms.sh  get_wasms.sh
src/subnet_rental_canister/: Cargo.toml  subnet_rental_canister.did
src/subnet_rental_canister/src/: canister.rs  canister_state.rs  external_calls.rs  external_types.rs  history.rs  http_request.rs  lib.rs  types.rs
src/subnet_rental_canister/src/external_canister_interfaces/: exchange_rate_canister.rs  governance_canister.rs  mod.rs
src/subnet_rental_canister/tests/: integration_tests.rs
src/xrc_mock/: Cargo.toml
src/xrc_mock/src/: lib.rs
