[package]
name = "subnet_rental_canister"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.10.2"
hex = "0.4.3"
ic-cdk = "0.13.1"
ic-cdk-timers = "0.7.0"
ic-ledger-types = "0.10.0"
ic-stable-structures = "0.6.3"
icrc-ledger-types = "0.1.5"
itertools = "0.12.0"
serde = "1.0.197"
serde_bytes = "0.11.14"
sha2 = "0.10.8"

[dev-dependencies]
pocket-ic = "2.2.0"
