[package]
name = "subnet_rental_canister"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
candid = "0.10.14"
hex = "0.4.3"
ic-cdk = "0.18.4"
ic-cdk-timers = "0.12.1"
ic-ledger-types = "0.15.0"
ic-stable-structures = "0.6.9"
ic-xrc-types = "1.2.0"
icrc-ledger-types = "0.1.10"
itertools = "0.14.0"
serde = "1.0.219"
serde_bytes = "0.11.17"
sha2 = "0.10.9"

[dev-dependencies]
pocket-ic = "9.0.2"
